# entmoot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
docs/adr/: 001-graph-schema.md  002-pipeline-orchestration.md  README.md
docs/prd/: 001-wikidata-import.md  README.md
src/entmoot/: app.py  config.py  guards.py
src/entmoot/graph/: __init__.py  driver.py  schema.py
src/entmoot/models/: __init__.py  admin.py  attribute.py  domain.py  entity.py  fact.py  value.py
src/entmoot/pipeline/: __init__.py  import_wikidata.py  runner.py  wikidata.py
src/entmoot/pipeline/dagster/: __init__.py  assets.py  definitions.py  jobs.py  resources.py  schedules.py
src/entmoot/routes/: __init__.py  admin.py  attributes.py  entities.py
tests/: conftest.py  test_admin.py  test_health.py  test_pipeline.py  test_schema.py
