[project]
name = "entmoot"
version = "0.1.0"
description = "Domain-aware entity and fact knowledge graph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar[standard]>=2.0",
    "neo4j>=5.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/entmoot"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
